# 2025_20663277

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  git_cheat_sheet.txt  hi_and_date.cmd  index.html
.github/workflows/: doxygen-deploy.yml
worksheet3/calc/: calc.cpp
worksheet3/calc/adder_dynamic/include/: adder.h
worksheet3/calc/adder_static/include/: adder.h
worksheet3/worksheet3/: hello.cpp
worksheet4/calc/: adder.cpp
worksheet5/: CMakeLists.txt  adder.h
worksheet6/worksheet6task1/task1widgets/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
worksheet7/excersize 3/task1widgets/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h
